build/ci: mark supervisor and e2e tests as flaky
Change-Id: I56459eac238d3ecc5c8429226cab1c32ceb2e0c4
Reviewed-on: https://review.monogon.dev/c/monogon/+/1088
Tested-by: Jenkins CI
Reviewed-by: Serge Bazanski <serge@monogon.tech>

--- a/metropolis/pkg/supervisor/BUILD.bazel
+++ b/metropolis/pkg/supervisor/BUILD.bazel
@@ -22,5 +22,7 @@ go_test(
     name = "supervisor_test",
     srcs = ["supervisor_test.go"],
     embed = [":supervisor"],
+    # TODO: https://github.com/monogon-dev/monogon/issues/131
+    flaky = True,
     deps = ["//metropolis/pkg/logtree"],
 )
