cloud/bmaas: clean up bmdb package
Everything living in sessions.go made this a bit unreadable.

We also drive-by add some extra metadata fields to Connection. This will
come in handy in an upcoming change.

Change-Id: Ibabec9e3bd0b29b727638b9450a53ba28c33e678
Reviewed-on: https://review.monogon.dev/c/monogon/+/1130
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/bmaas/bmdb/BUILD.bazel
+++ b/cloud/bmaas/bmdb/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "bmdb",
     srcs = [
         "bmdb.go",
+        "connection.go",
         "sessions.go",
     ],
     importpath = "source.monogon.dev/cloud/bmaas/bmdb",
