--- a/cloud/shepherd/equinix/manager/server/BUILD.bazel
+++ b/cloud/shepherd/equinix/manager/server/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//cloud/bmaas/bmdb",
+        "//cloud/bmaas/bmdb/webug",
         "//cloud/lib/component",
         "//cloud/shepherd/equinix/manager",
         "//cloud/shepherd/equinix/wrapngo",
