--- a/cloud/shepherd/equinix/manager/BUILD.bazel
+++ b/cloud/shepherd/equinix/manager/BUILD.bazel
@@ -23,6 +23,7 @@ go_library(
         "@io_k8s_klog_v2//:klog",
         "@org_golang_google_protobuf//proto",
         "@org_golang_x_crypto//ssh",
+        "@org_golang_x_sync//errgroup",
         "@org_golang_x_time//rate",
     ],
 )
