cloud/bmdb: add up/down migration test
This isn't very exhaustive, but it's enough to catch migration issues
which we already had.

Change-Id: Ie26b7646bb8b051a613e75cb69a1708f9288a0cc
Reviewed-on: https://review.monogon.dev/c/monogon/+/1137
Tested-by: Jenkins CI
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/cloud/bmaas/bmdb/BUILD.bazel
+++ b/cloud/bmaas/bmdb/BUILD.bazel
@@ -23,6 +23,7 @@ go_library(
 go_test(
     name = "bmdb_test",
     srcs = [
+        "migrations_test.go",
         "queries_test.go",
         "reflection_test.go",
         "sessions_test.go",
