c/a/api: reorganize and add AgentInit
Move hardware reporting-related data into a separate file for better
organization.

Also add an AgentInit message which will be used to pass data to the
Agent.

Change-Id: I1eecbd5a78da03170651f76f9f24e134dddaca4f
Reviewed-on: https://review.monogon.dev/c/monogon/+/1140
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Leopold Schabel <leo@monogon.tech>

--- a/cloud/agent/api/BUILD.bazel
+++ b/cloud/agent/api/BUILD.bazel
@@ -6,9 +6,11 @@ proto_library(
     name = "api_proto",
     srcs = [
         "agent.proto",
+        "hwreport.proto",
         "takeover.proto",
     ],
     visibility = ["//visibility:public"],
+    deps = ["//net/proto:net_proto_proto"],
 )
 
 go_proto_library(
@@ -16,6 +18,7 @@ go_proto_library(
     importpath = "source.monogon.dev/cloud/agent/api",
     proto = ":api_proto",
     visibility = ["//visibility:public"],
+    deps = ["//net/proto"],
 )
 
 go_library(
