m/node/core: fix up resolver keepalives
We set up keepalives in the resolver to quickly detect that a Curator is
not longer available.

This fixes two bugs related to their use:

 1. When the resolver's curator connection dies (eg. when we get kicked
    off by the curator for keepaliving too often), we recreate it fully
    and thus lose any 'keepalive backoff' state that the client
    connection carries, thereby not letting that keepalive bachoff
    mechanism kick in as intended.
 2. The server-side limits for client keepalives were simply too low
    compared to what the resolver library wants to use.

Change-Id: If2e53e20a1462e9f71a3723b92d346aff795d84c
Reviewed-on: https://review.monogon.dev/c/monogon/+/1321
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/node/core/curator/BUILD.bazel
+++ b/metropolis/node/core/curator/BUILD.bazel
@@ -42,6 +42,7 @@ go_library(
         "@io_etcd_go_etcd_client_v3//concurrency",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//keepalive",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//proto",
         "@org_golang_google_protobuf//types/known/durationpb",
