m/pkg/event: implement Pipe helper
This simplifies some of the roleserver code, and is possible now that
event values are strongly typed.

Change-Id: I0a22ff97fe4304d35cc9cee105e98bc224d1433b
Reviewed-on: https://review.monogon.dev/c/monogon/+/1323
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/pkg/event/BUILD.bazel
+++ b/metropolis/pkg/event/BUILD.bazel
@@ -5,4 +5,5 @@ go_library(
     srcs = ["event.go"],
     importpath = "source.monogon.dev/metropolis/pkg/event",
     visibility = ["//visibility:public"],
+    deps = ["//metropolis/pkg/supervisor"],
 )
