--- a/metropolis/test/util/BUILD.bazel
+++ b/metropolis/test/util/BUILD.bazel
@@ -5,4 +5,5 @@ go_library(
     srcs = ["runners.go"],
     importpath = "source.monogon.dev/metropolis/test/util",
     visibility = ["//metropolis:__subpackages__"],
+    deps = ["//metropolis/test/launch"],
 )
