--- a/metropolis/node/kubernetes/pki/BUILD.bazel
+++ b/metropolis/node/kubernetes/pki/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//metropolis/node:__subpackages__"],
     deps = [
         "//metropolis/node",
+        "//metropolis/node/core/consensus",
         "//metropolis/pkg/pki",
         "@io_etcd_go_etcd_client_v3//:client",
         "@io_k8s_client_go//tools/clientcmd",
