--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 
 go_library(
     name = "metroctl_lib",
@@ -13,6 +13,7 @@ go_library(
         "node.go",
         "rpc.go",
         "set.go",
+        "table.go",
         "takeownership.go",
     ],
     data = [
@@ -44,4 +45,10 @@ go_binary(
     name = "metroctl",
     embed = [":metroctl_lib"],
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "metroctl_test",
+    srcs = ["table_test.go"],
+    embed = [":metroctl_lib"],
 )
