--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -3,18 +3,16 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 go_library(
     name = "metroctl_lib",
     srcs = [
-        "approve.go",
-        "describe.go",
-        "format.go",
-        "install.go",
-        "k8scredplugin.go",
-        "list.go",
+        "cmd_install.go",
+        "cmd_k8scredplugin.go",
+        "cmd_node.go",
+        "cmd_node_approve.go",
+        "cmd_node_set.go",
+        "cmd_takeownership.go",
         "main.go",
-        "node.go",
         "rpc.go",
-        "set.go",
         "table.go",
-        "takeownership.go",
+        "table_node.go",
     ],
     data = [
         "//metropolis/node:bundle",
@@ -32,7 +30,6 @@ go_library(
         "//metropolis/node/core/identity",
         "//metropolis/node/core/rpc",
         "//metropolis/proto/api",
-        "//metropolis/proto/common",
         "@com_github_adrg_xdg//:xdg",
         "@com_github_spf13_cobra//:cobra",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
