--- a/metropolis/node/kubernetes/nfproxy/BUILD.bazel
+++ b/metropolis/node/kubernetes/nfproxy/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "@io_k8s_client_go//informers",
         "@io_k8s_client_go//kubernetes",
         "@io_k8s_client_go//kubernetes/scheme",
+        "@io_k8s_client_go//tools/cache",
         "@io_k8s_client_go//tools/record",
     ],
 )
