c/b/s/api: extend agent API
Extends the BMaaS API to cover the needs of the agent installing Monogon
OS. This covers adding the hardware report, allowing reporting of errors
while gathering it as well as adding installation request and response
data.

Change-Id: I5b2a2768d36411ca8236ddcf016a102b6b847c7e
Reviewed-on: https://review.monogon.dev/c/monogon/+/1404
Tested-by: Jenkins CI
Reviewed-by: Serge Bazanski <serge@monogon.tech>

--- a/cloud/bmaas/server/api/BUILD.bazel
+++ b/cloud/bmaas/server/api/BUILD.bazel
@@ -6,6 +6,10 @@ proto_library(
     name = "api_proto",
     srcs = ["agent.proto"],
     visibility = ["//visibility:public"],
+    deps = [
+        "//cloud/agent/api:api_proto",
+        "//metropolis/proto/api:api_proto",
+    ],
 )
 
 go_proto_library(
@@ -14,6 +18,10 @@ go_proto_library(
     importpath = "source.monogon.dev/cloud/bmaas/server/api",
     proto = ":api_proto",
     visibility = ["//visibility:public"],
+    deps = [
+        "//cloud/agent/api",
+        "//metropolis/proto/api",
+    ],
 )
 
 go_library(
