--- a/metropolis/installer/test/testos/BUILD.bazel
+++ b/metropolis/installer/test/testos/BUILD.bazel
@@ -31,7 +31,7 @@ pkg_zip(
         ":kernel_efi",
         ":verity_rootfs",
     ],
-    visibility = ["//metropolis/installer/test:__subpackages__"],
+    visibility = ["//visibility:public"],
 )
 
 go_library(
