--- a/metropolis/proto/api/BUILD.bazel
+++ b/metropolis/proto/api/BUILD.bazel
@@ -14,6 +14,7 @@ proto_library(
     deps = [
         "//metropolis/proto/common:common_proto",
         "//metropolis/proto/ext:ext_proto",
+        "//net/proto:net_proto_proto",
         "@com_google_protobuf//:duration_proto",
         "@com_google_protobuf//:timestamp_proto",
     ],
@@ -28,6 +29,7 @@ go_proto_library(
     deps = [
         "//metropolis/proto/common",
         "//metropolis/proto/ext",
+        "//net/proto",
     ],
 )
 
