m/n/c/curator: implement cluster networking storage
This is just the Curator side, the client implementation will come in a
subsequent change.

Change-Id: I4a9b5ad5c77662e11122d0a1cea22d80ecfe4299
Reviewed-on: https://review.monogon.dev/c/monogon/+/1413
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/node/core/curator/BUILD.bazel
+++ b/metropolis/node/core/curator/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "impl_leader.go",
         "impl_leader_aaa.go",
         "impl_leader_certificates.go",
+        "impl_leader_cluster_networking.go",
         "impl_leader_curator.go",
         "impl_leader_management.go",
         "listener.go",
@@ -39,6 +40,7 @@ go_library(
         "@com_github_google_cel_go//cel:go_default_library",
         "@com_github_google_cel_go//checker/decls:go_default_library",
         "@com_github_google_cel_go//common/types:go_default_library",
+        "@com_zx2c4_golang_wireguard_wgctrl//wgtypes",
         "@go_googleapis//google/api/expr/v1alpha1:expr_go_proto",
         "@io_etcd_go_etcd_client_v3//:client",
         "@io_etcd_go_etcd_client_v3//concurrency",
