m/n/core/clusternet: init
This implements the new cluster networking daemon. This is just the
daemon itself with some tests. It's not yet used.

Change-Id: Ida34b647db0d075fcaaf2d57c9a8a14701713552
Reviewed-on: https://review.monogon.dev/c/monogon/+/1416
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -9,10 +9,12 @@ go_library(
     name = "node",
     srcs = [
         "ids.go",
+        "net_protocols.go",
         "ports.go",
     ],
     importpath = "source.monogon.dev/metropolis/node",
     visibility = ["//metropolis:__subpackages__"],
+    deps = ["@com_github_vishvananda_netlink//:netlink"],
 )
 
 # debug_build checks if we're building in debug mode and enables various debug features for the image.
