m/n/core/mgmt: implement node-local management service
Change-Id: I1e8a8ff46d1172e00f2d991ae3cc3af1929b6e4e
Reviewed-on: https://review.monogon.dev/c/monogon/+/1428
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/core/roleserve/BUILD.bazel
+++ b/metropolis/node/core/roleserve/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "worker_controlplane.go",
         "worker_heartbeat.go",
         "worker_kubernetes.go",
+        "worker_nodemgmt.go",
         "worker_rolefetch.go",
         "worker_statuspush.go",
     ],
@@ -23,6 +24,7 @@ go_library(
         "//metropolis/node/core/curator/proto/api",
         "//metropolis/node/core/identity",
         "//metropolis/node/core/localstorage",
+        "//metropolis/node/core/mgmt",
         "//metropolis/node/core/network",
         "//metropolis/node/core/rpc",
         "//metropolis/node/core/rpc/resolver",
