--- a/cloud/shepherd/equinix/manager/server/BUILD.bazel
+++ b/cloud/shepherd/equinix/manager/server/BUILD.bazel
@@ -1,4 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image")
+load("//build/static_binary_tarball:def.bzl", "static_binary_tarball")
 
 go_library(
     name = "server_lib",
@@ -20,4 +22,18 @@ go_binary(
     name = "server",
     embed = [":server_lib"],
     visibility = ["//visibility:public"],
+)
+
+static_binary_tarball(
+    name = "server_layer",
+    executable = ":server",
+)
+
+container_image(
+    name = "server_container",
+    base = "@go_image_base//image",
+    entrypoint = ["/app/cloud/shepherd/equinix/manager/server/server_/server"],
+    tars = [":server_layer"],
+    visibility = ["//visibility:public"],
+    workdir = "/app",
 )
