--- a/metropolis/pkg/logtree/BUILD.bazel
+++ b/metropolis/pkg/logtree/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "logtree",
     srcs = [
         "doc.go",
+        "grpc.go",
         "journal.go",
         "journal_entry.go",
         "journal_subscriber.go",
@@ -15,6 +16,7 @@ go_library(
         "logtree_entry.go",
         "logtree_publisher.go",
         "testhelpers.go",
+        "zap.go",
     ],
     importpath = "source.monogon.dev/metropolis/pkg/logtree",
     visibility = ["//metropolis:__subpackages__"],
@@ -22,7 +24,10 @@ go_library(
         "//metropolis/pkg/logbuffer",
         "//metropolis/proto/common",
         "@com_github_mitchellh_go_wordwrap//:go-wordwrap",
+        "@org_golang_google_grpc//grpclog",
         "@org_golang_google_protobuf//types/known/timestamppb",
+        "@org_uber_go_zap//:zap",
+        "@org_uber_go_zap//zapcore",
     ],
 )
 
@@ -32,7 +37,11 @@ go_test(
         "journal_test.go",
         "klog_test.go",
         "logtree_test.go",
+        "zap_test.go",
     ],
     embed = [":logtree"],
-    deps = ["@com_github_google_go_cmp//cmp"],
+    deps = [
+        "@com_github_google_go_cmp//cmp",
+        "@org_uber_go_zap//:zap",
+    ],
 )
